chore: rename route
