# pkg/gateway/api/accounts/create_account.go
@@ -21,7 +21,7 @@ import (
 // @Failure 409 "User already registered"
 // @Failure 422 "Request is well formed but contains invalid data"
 // @Failure 500 "Internal server error"
-// @Router /accounts/signup [post]
+// @Router /accounts [post]
 func (h Handler) CreateAccount(r *http.Request) responses.Response {
 	operation := "accounts.Handler.CreateAccount"
 
